Modify JWT
